Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

1.2.2 - 3/16/2011 - Aaron Edwards
----------------------------------------------------------------------
- Fix to new order ID filter
- Product list categories dropdown filter fixed in 3.1

1.2.1 - 3/11/2011 - Aaron Edwards
----------------------------------------------------------------------
- Small Payment gateway bugfixes
- Chained payments not clearing cart bugfix

1.2.0 - 3/10/2011 - S H Mohanjith
----------------------------------------------------------------------
- Headway theme compatiblity fix: Missing argument 2 for MarketPress::filter_nav_menu()
- Fix category dropdown widget js
- Add filter to orderid generation
- Additional classes and filters added for our custom theme
- Added primary key on global term_relationships table to prevent duplicates
- More 2CO plugin conflict fixes

1.1.9 - 2/18/2011 - Aaron Edwards
----------------------------------------------------------------------
- Hooks added for externally loaded gateway/shipping plugins
- Added mp_items_in_cart() template function to determine if items are in the users cart
- 2Checkout payment plugin conflict with Membership plugin
- Fixed bug with low stock notification
- Added admin notification for new orders

1.1.8 - 2/03/2011 - Aaron Edwards
----------------------------------------------------------------------
- Lots of hooks added for plugins
- Bug fix when using custom cart templates
- Added SOLUTIONTYPE=Sole to paypal express to allow CC payments without paypal account

1.1.7 - 1/25/2011 - Aaron Edwards
----------------------------------------------------------------------
- Fixed 3.1 compatibility bug due to RC3 revertions
- Added setting to display prices with no decimals

1.1.6 - 1/07/2011 - Aaron Edwards
----------------------------------------------------------------------