@@ -9,6 +9,7 @@ Change Log:
 ----------------------------------------------------------------------
 - Fix to new order ID filter
 - Product list categories dropdown filter fixed in 3.1
+- Fixed virtual page display issues in some themes
 
 1.2.1 - 3/11/2011 - Aaron Edwards
 ----------------------------------------------------------------------
